syntax = "proto3";

package shared;

option go_package = "github.com/williamokano/hashicorp-plugin-example/pkg/protocol";

service Plugin {
  rpc ShouldExecute(ContextProto) returns (ExecutionDecisionProto);
  rpc Process(ContextProto) returns (ContextProto);
  rpc GetMetadata(Empty) returns (Metadata);
}

message Empty {}

message EventProto {
  string type = 1;
  string source = 2;
  string content = 3;
  string user_id = 4;
  string channel_id = 5;
  string metadata_json = 6; // JSON serialized map
}

message ResponseProto {
  string plugin_name = 1;
  string content = 2;
  string type = 3;
  string data_json = 4; // JSON serialized map
}

message ContextProto {
  EventProto event = 1;
  string properties_json = 2; // JSON serialized map
  repeated ResponseProto responses = 3;
}

message ExecutionDecisionProto {
  bool should_execute = 1;
  string reason = 2;
}

message Metadata {
  string name = 1;
  string version = 2;
  string build_time = 3;
  string min_cli_version = 4;
  string max_cli_version = 5;
  string description = 6;
  int32 priority = 7;
}